// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de citas Actualizar nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10/12/2022",
      "hora": "10:30",
      "id": 1648210270859,
      "mascota": "Nuevo nombre",
      "propietario": "Parrado",
      "sintomas": "No se calla",
      "telefono": "6666",
    },
  ],
}
`;

exports[`Probar la clase de citas Agregar una nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10/12/2022",
      "hora": "10:30",
      "id": 1648210270859,
      "mascota": "Hook",
      "propietario": "Parrado",
      "sintomas": "No se calla",
      "telefono": "6666",
    },
  ],
}
`;

exports[`Probar la clase de citas Eliminar cita 1`] = `
Citas {
  "citas": Array [],
}
`;
